# dual-readout

DRdigi/test/: runDigi.py
DRreco/include/: DRcalib3D.h
DRreco/src/: DRcalib3D.cpp
DRreco/test/: runDRcalib3D.py
DRsim/DRsimG4Components/: CMakeLists.txt
DRsim/DRsimG4Components/include/: SimG4SaveDRcaloTrajectory.h
DRsim/DRsimG4Components/src/: SimG4SaveDRcaloTrajectory.cpp
DRsim/DRsimG4Components/test/: P8generic.cmnd  runP8DRsim.py
DRsim/DRsimG4Full/include/: SimG4DRcaloActionInitialization.h  SimG4DRcaloTrackingAction.h
DRsim/DRsimG4Full/src/components/: SimG4DRcaloActions.cpp  SimG4DRcaloActions.h
DRsim/DRsimG4Full/src/lib/: SimG4DRcaloActionInitialization.cpp  SimG4DRcaloTrackingAction.cpp
analysis/: CMakeLists.txt  vis.cpp
analysis/test/: displayEvent.cpp
